fixed background problems on mobile

--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ html {
     scroll-behavior: smooth;
 }
 
-body {
+/*body {
     margin: 0;
     width: 100%;   
     background-position: 60%;
@@ -22,8 +22,24 @@ body {
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;       
-}
+}*/
 
+.bkground {
+    background-image: url("static/w_dal1_przyciete.jpg");
+    background-repeat: no-repeat;
+    background-position: 60%;
+    background-attachment: fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+}
 
 #banner {
     width: 100%;
